# codetest

./: .gitignore  README.md
cpp/: conclusion.md  main.cpp  newton_raphson.cpp  plot.cpp  test1.cpp  test2.cpp  test3.cpp  test4.cpp  test5.cpp  test6.cpp
fortran/: 1.txt  CMakeLists.txt  conclusion.md  config.txt  help.md  test10.f90  test11.f90  test12.f90  test13.f90  test14.f90  test15.f90  test16.f90  test17.f90  test18.f90  test19.f90  test2.f90  test20.f90  test21.f90  test22.f90  test23.f90  test24.f90  test26.f90  test27.f90  test28.f90  test3.f90  test4.f90  test5.f90  test6.f90  test7.f90  test8.f90  test9.f90  umat.md  write_arr_mat.f90  write_array_matrix.f90  write_mat.f90
fortran/old/: m2.f90  matinv.f90  test.f90  test1.f90  test10.f90  test11.f90  test12.f90  test13.f90  test14.f90  test15.f90  test16.f90  test17.f90  test18.f90  test19.f90  test2.f90  test20.f90  test21.f90  test22.f90  test23.f90  test24.f90  test25.f90  test26.f90  test27.f90  test28.f90  test29.f90  test3.f90  test30.f90  test31.f90  test32.f90  test33.f90  test34.f90  test35.f90  test36.f90  test37.f90  test38.f90  test4.f90  test5.f90  test6.f90  test7.f90  test8.f90  (+4 more)
python/: Euler.py  Euler_NR.py  bankaccount.py  liulu.py  liulu_train.csv  liulu_valid.csv  newton_raphson.py  pp.py  test.ipynb  test4.py  test5.py  test_BankAccount.py  test_log.py  test_pydantic.py  tk.py  ucp.py
python/abaqus_postprocess/: pp2.py
python/people/: fzw.py  liulu.py  liulu_data.csv  liulu_train.csv  liulu_valid.csv
python/test/: bankaccount.py  tesst_pydantic.py  test1.py  test2.py  test3.py  (+3 more)
(+7 files in other folders)
